--- a/css/style.css
+++ b/css/style.css
@@ -153,11 +153,11 @@ h2 span {
   font-size: 14px;
 }
 
-.places-list li a div {
+.places-list li a img {
   margin-bottom: 10px;
   background: #ddd;
-  width: 100%;
-  height: 140px;
+  width: 170px;
+  height: 170px;
 }
 
 .map-modal {
